<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/level_7_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/level_7_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/level_is"
            android:textColor="@color/buttonGrey"
            android:textSize="22sp"
            />

        <ImageView
            android:id="@+id/level_7_alarm"
            android:src="@drawable/alarm"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/level_7_passed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/level_passed"
            android:textSize="30sp"
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ad_layout_for_hint_7"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ad_layout_for_hint_7_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/ad_layout_for_hint_7_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ad_for_hint"
            android:textSize="12sp"/>
    </LinearLayout>
</RelativeLayout>