<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/level_1_main_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/level_1_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/level_1_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:padding="6dp"
            android:text=""/>
    </RelativeLayout>

    <TextView
        android:id="@+id/level_1_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/level_is"
        android:textColor="@color/buttonGrey"
        android:textSize="22sp"
        />

    <TextView
        android:id="@+id/level_1_passed"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="110dp"
        android:gravity="center"
        android:text="@string/level_passed"
        android:textSize="30sp"
        />

    <ImageView
        android:id="@+id/level_1_next"
        android:layout_width="74dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:alpha="0.4"
        android:scaleType="fitCenter"
        android:src="@drawable/next_level"/>

    <LinearLayout
        android:id="@+id/ad_layout_for_hint_1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ad_layout_for_hint_1_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/ad_layout_for_hint_1_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ad_for_hint"
            android:textSize="12sp"/>
    </LinearLayout>
</RelativeLayout>