<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/level_3_main_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:id="@+id/level_3_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/level_3_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/level_is"
                android:textColor="@color/buttonGrey"
                android:textSize="28sp"
                />

            <ImageView
                android:id="@+id/level_3_next_final"
                android:layout_width="74dp"
                android:layout_height="50dp"
                android:layout_below="@+id/level_3_name"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                android:alpha="0.4"
                android:scaleType="fitCenter"
                android:src="@drawable/next_white"/>

            <TextView
                android:id="@+id/level_3_passed_final"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/level_3_next_final"
                android:gravity="center"
                android:text="@string/level_3_second"
                android:textColor="@color/background_light_grey"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/level_3_nulltv"
                android:layout_width="wrap_content"
                android:layout_height="15000dp"/>

            <TextView
                android:id="@+id/level_3_passed"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/level_3_nulltv"
                android:gravity="center"
                android:text="@string/level_passed"
                android:textColor="@color/background_light_grey"
                android:textSize="30sp"
                />

            <ImageView
                android:id="@+id/level_3_next"
                android:layout_width="74dp"
                android:layout_height="50dp"
                android:layout_below="@+id/level_3_passed"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="100dp"
                android:layout_marginTop="50dp"
                android:alpha="0.4"
                android:scaleType="fitCenter"
                android:src="@drawable/next_white"/>
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ad_layout_for_hint_3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ad_layout_for_hint_3_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/ad_layout_for_hint_3_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ad_for_hint"
            android:textSize="12sp"/>
    </LinearLayout>
</RelativeLayout>