<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/level_5_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/level_5_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/level_is"
            android:textColor="@color/buttonGrey"
            android:textSize="22sp"
            />

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_below="@+id/level_5_name"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp">

            <ProgressBar
                android:id="@+id/level_5_progress_bar_1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="4dp"/>

            <ProgressBar
                android:id="@+id/level_5_progress_bar_2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:padding="4dp"/>

            <ProgressBar
                android:id="@+id/level_5_progress_bar_3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:padding="4dp"/>

            <ProgressBar
                android:id="@+id/level_5_progress_bar_4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:padding="4dp"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/level_5_switch_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="100dp"
                android:padding="6dp"
                android:text=""/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/level_5_switch_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="100dp"
                android:padding="6dp"
                android:text=""/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/level_5_switch_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="170dp"
                android:padding="6dp"
                android:text=""/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/level_5_switch_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="170dp"
                android:padding="6dp"
                android:text=""/>
        </RelativeLayout>

        <ImageView
            android:id="@+id/level_5_next"
            android:layout_width="74dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:alpha="0.4"
            android:scaleType="fitCenter"
            android:src="@drawable/next_white"/>

        <TextView
            android:id="@+id/level_5_passed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/level_passed"
            android:textSize="30sp"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ad_layout_for_hint_5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ad_layout_for_hint_5_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question"
            android:textSize="40sp"/>

        <TextView
            android:id="@+id/ad_layout_for_hint_5_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ad_for_hint"
            android:textSize="12sp"/>
    </LinearLayout>
</RelativeLayout>